--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.8.1
+asgiref==3.5.2
 cffi==1.15.1
 click==8.1.3
 cryptography==37.0.4
@@ -11,12 +12,13 @@ importlib-metadata==4.12.0
 importlib-resources==5.9.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-jwt==1.3.1
 Mako==1.2.1
 MarkupSafe==2.1.1
 marshmallow==3.17.0
 packaging==21.3
+psycopg2==2.9.3
 pycparser==2.21
+PyJWT==2.4.0
 pyparsing==3.0.9
 python-dotenv==0.20.0
 six==1.16.0
